# student_journal

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  scheme.html  student-journal.spec
.github/workflows/: lint.yml  ruff.yml
docs/: edit_hometask.md  edit_lesson.md  edit_subject.md  edit_teacher.md  hometask_list.md  register.md  subject_list.md  teacher_list.md
resources/forms/: about.ui  edit_hometask.ui  edit_lesson.ui  edit_student.ui  edit_subject.ui  edit_teacher.ui  hometask_list.ui  main_window.ui  progress.ui  register.ui  schedule.ui  subject_list.ui  teacher_list.ui
src/student_journal/adapters/: config.py  error_locator.py  id_provider.py  load_test_data.py
src/student_journal/adapters/converter/: __init__.py  home_task.py  student.py  subject.py  teacher.py
src/student_journal/adapters/db/: connection_factory.py  connection_maker.py  transaction_manager.py
src/student_journal/adapters/db/gateway/: home_task_gateway.py  lesson_gateway.py  student_gateway.py  subject_gateway.py  teacher_gateway.py
src/student_journal/adapters/db/schema/: load_schema.py  schema.sql
src/student_journal/adapters/exceptions/ui/: base.py  hometask.py  lesson.py  schedule.py  student.py  (+2 more)
src/student_journal/adapters/models/: __init__.py  home_task.py  lesson.py  teacher.py
src/student_journal/application/common/: home_task_gateway.py  id_provider.py  lesson_gateway.py  student_gateway.py  subject_gateway.py  teacher_gateway.py  transaction_manager.py
src/student_journal/application/converters/: student.py
src/student_journal/application/exceptions/: base.py  home_task.py  lesson.py  student.py  subject.py  teacher.py
src/student_journal/application/hometask/: create_home_task.py  delete_home_task.py  read_home_task.py  read_home_tasks.py  update_home_task.py
src/student_journal/application/invariants/: home_task.py  lesson.py  student.py  subject.py  teacher.py
src/student_journal/application/lesson/: create_lesson.py  delete_all_lessons.py  delete_lesson.py  delete_lessons_for_week.py  read_first_lessons_of_weeks.py  read_lesson.py  read_lessons_for_week.py  update_lesson.py
src/student_journal/application/models/: home_task.py  lesson.py  student.py  subject.py  teacher.py
src/student_journal/application/student/: __init__.py  create_student.py  read_current_student.py  read_student.py  update_student.py
src/student_journal/application/subject/: create_subject.py  delete_subject.py  read_subject.py  read_subjects.py  update_subject.py
src/student_journal/application/teacher/: __init__.py  create_teacher.py  delete_teacher.py  read_teacher.py  read_teachers.py  update_teacher.py
src/student_journal/bootstrap/: cli.py
src/student_journal/bootstrap/di/: adapter_provider.py  command_provider.py  config_provider.py  container.py  db_provider.py  gateway_provider.py
src/student_journal/bootstrap/entrypoint/: qt.py
src/student_journal/domain/: home_task.py  lesson.py  student.py  subject.py  teacher.py
src/student_journal/domain/value_object/: student_id.py  subject_id.py  task_id.py  teacher_id.py
src/student_journal/hometask/: create_home_task.py  read_home_task.py  update_home_task.py
src/student_journal/presentation/resource/: styles.qss
src/student_journal/presentation/ui/: about_ui.py  edit_hometask_ui.py  edit_lesson.py  edit_lesson_ui.py  edit_student.py  edit_student_ui.py  edit_subject_ui.py  edit_teacher_ui.py  hometask_list_ui.py  progress_ui.py  register.py  register_ui.py  schedule_ui.py  subject_list_ui.py  teacher_list_ui.py
src/student_journal/presentation/widget/: about.py  dashboard.py  edit_hometask.py  edit_student.py  edit_subject.py  edit_teacher.py  hometask_list.py  main_window.py  month_year_picker.py  register.py
tests/common/mock/: transaction_manager.py
tests/gateway/: conftest.py
tests/gateway/home_task/: conftest.py  test_home_task_gateway.py
tests/gateway/lesson/: test_lesson_gateway.py
tests/gateway/lessson/: conftest.py  test_lesson_gateway.py
tests/gateway/student/: conftest.py  test_student_gateway.py
tests/gateway/subject/: conftest.py  test_subject_gateway.py
tests/gateway/teacher/: conftest.py  test_teacher_gateway.py
tests/student/: conftest.py
tests/student/gateway/: conftest.py  test_student_gateway.py
tests/student/unit/: conftest.py  test_student.py
tests/student/unit/mock/: __init__.py
tests/teacher/: confest.py  conftest.py
tests/teacher/gateway/: confest.py  conftest.py  test_teacher_gateway.py
tests/teacher/unit/: conftest.py  test_teacher.py
tests/unit/: conftest.py
tests/unit/mock/: __init__.py  student_gateway.py  teacher_gateway.py  transaction_manager.py
tests/unit/student/: conftest.py  test_student.py
tests/unit/student/mock/: __init__.py  student_gateway.py
tests/unit/subject/: conftest.py
tests/unit/teacher/: conftest.py  test_teacher.py
tests/unit/teacher/mock/: teacher_gateway.py
(+16 files in other folders)
