[build-system]
requires = [
    'setuptools==68.1.2',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'student_journal'
version = '0.0.1'
description = 'Student journal project'
readme = 'README.md'
requires-python = '>=3.12.4'
dependencies = [
    'ruff==0.6.8',
    'mypy==1.11.2',
    'pre-commit==3.8.0',
    'adaptix==3.0.0b8',
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
ignore_missing_imports = false
warn_no_return = false
files = ["src/**/*.py"]

[tool.ruff]
line-length = 88
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
select = ['ALL']

ignore = [
  # Rules that should be turned on in the near future
  'N818',
  'B904',
  'FIX002',
  'RUF012',
  'ERA001',

  # Rules emitting false alerts
  'N804',
  'B008',
  'BLE001',
  'RUF009',
  'RUF001',

  # Rules that are not applicable in the project for now
  'D',
  'TID252',
  'D104',
  'ANN',
  'SLF001',
  'ARG',
  'D100',
  'PLR0913',
  'TCH002',
  'EXE002',

  # Strange and obscure rules that will never be turned on
  'ANN101',
  'FA100',
  'TRY003',
  'TRY201',
  'EM',
  'PERF203',
  'TCH001',
  'TD002',
  'PTH201',
  'RSE102',
  'RET504',
  'FBT001',
  'TD003',
  'B024',
  'ISC001',
  'B027',
  'PLR2004',
  'PGH003',
]

[[project.authors]]
name = 'lubaskinc0de'
email = 'lubaskincorporation@gmail.com'