[build-system]
requires = [
    'setuptools==68.1.2',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'student_journal'
version = '1.0.0'
description = 'Student journal project'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
    'adaptix==3.0.0b8',
    'PyQt6==6.5.0',
    'dishka==1.4.0',
    'tomli-w==1.1.0',
]

[project.optional-dependencies]
test = [
    'pytest==8.3.3',
]
lint = [
    'pre-commit==3.8.0',
    'ruff==0.8.0',
    'mypy==1.13.0',
]
ci = [
    'mypy==1.13.0',
    'pytest==8.3.3',
    'ruff==0.8.0',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning"

[tool.mypy]
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
ignore_missing_imports = false
warn_no_return = true
disallow_untyped_calls = false

files = ["src/"]
exclude = ["src/student_journal/presentation/ui/.*\\.py"]

[tool.ruff]
line-length = 88
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = ["src/student_journal/presentation/ui/**/*.py"]

[tool.ruff.lint]
select = ['ALL']

ignore = [
  # Strange and obscure
  'D100',
  'D104',
  'D101',
  'D102',
  'RET504',
  'D103',
  'PLR0913',
  'S101',
  'EM101',
  'TRY003',
  'D107',
  'ARG002',
  'RUF001',
  'TC003',
  'PLR0912',
  'C901',
  # Not applicable for now
  'FIX002',
  'TD003',
  'TD002',
  'ARG001',
  'FBT002',
  'PGH003',
  'ERA001',
  'FBT001',
  'N802',
  # Does not work correctly
  'TC002',
  'TC001',
]

[[project.authors]]
name = 'lubaskinc0de'
email = 'lubaskincorporation@gmail.com'

[project.scripts]
student_journal = "student_journal.bootstrap.cli:main"